src/pages/Contact/Contact.css
.content{
    justify-content: center;
    align-items:center ;
    display: flex;
    flex-direction: column;
}





.cta-content{
    margin-top: 200px;
    text-align: center;
}

.company-name{
}
@media (max-width:576px){
    .typing{
        height: 20rem !important;
    }

    .cta-content{
        margin-top: 260px;
        text-align: center;
    }

    .myinfo-card{
        padding: 5%;
    }

    .company-name{
        transform: translateX(100%);
    }

    .detailcard{
    }

    
}


@media(max-width:320px){
    .company-name{
        border: 1px solid red;
    }
}

